--- a/docs/en/ml/index.asciidoc
+++ b/docs/en/ml/index.asciidoc
@@ -3,7 +3,7 @@
 
 [partintro]
 --
-The {xpack} {ml} features automate the analysis of time-series data by creating
+The {xpackml} features automate the analysis of time-series data by creating
 accurate baselines of normal behaviors in the data and identifying anomalous
 patterns in that data.
 
@@ -37,9 +37,9 @@ Jobs::
   necessary to perform an analytics task. For a list of the properties associated
   with a job, see <<ml-job-resource, Job Resources>>.
 
-Data feeds::
+{dfeeds-cap}::
   Jobs can analyze either a one-off batch of data or continuously in real time.
-  Data feeds retrieve data from {es} for analysis. Alternatively you can
+  {dfeeds-cap} retrieve data from {es} for analysis. Alternatively you can
   <<ml-post-data,POST data>> from any source directly to an API.
 
 Detectors::
@@ -51,7 +51,7 @@ Detectors::
   see <<ml-detectorconfig, Detector Configuration Objects>>.
 
 Buckets::
-  The {xpack} {ml} features use the concept of a bucket to divide the time
+  The {xpackml} features use the concept of a bucket to divide the time
   series into batches for processing. The _bucket span_ is part of the
   configuration information for a job. It defines the time interval that is used
   to summarize and model the data. This is typically between 5 minutes to 1 hour
@@ -63,7 +63,7 @@ Buckets::
 Machine learning nodes::
   A {ml} node is a node that has `xpack.ml.enabled` and `node.ml` set to `true`,
   which is the default behavior. If you set `node.ml` to `false`, the node can
-  service API requests but it cannot run jobs. If you want to use {xpack} {ml}
+  service API requests but it cannot run jobs. If you want to use {xpackml}
   features, there must be at least one {ml} node in your cluster. For more
   information about this setting, see <<ml-settings>>.
 
