--- a/docs/en/rest-api/ml/close-job.asciidoc
+++ b/docs/en/rest-api/ml/close-job.asciidoc
@@ -27,7 +27,7 @@ After it is closed, the job has a minimal overhead on the cluster except for
 maintaining its meta data. Therefore it is a best practice to close jobs that
 are no longer required to process data.
 
-When a data feed that has a specified end date stops, it automatically closes
+When a {dfeed} that has a specified end date stops, it automatically closes
 the job.
 
 NOTE: If you use the `force` query parameter, the request returns before the
