--- a/docs/en/rest-api/ml/delete-job.asciidoc
+++ b/docs/en/rest-api/ml/delete-job.asciidoc
@@ -19,8 +19,8 @@ IMPORTANT:  Deleting a job must be done via this API only. Do not delete the
             DELETE Document API. When {security} is enabled, make sure no `write`
             privileges are granted to anyone over the `.ml-*` indices.
 
-Before you can delete a job, you must delete the data feeds that are associated
-with it. See <<ml-delete-datafeed,Delete Data Feeds>>.
+Before you can delete a job, you must delete the {dfeeds} that are associated
+with it. See <<ml-delete-datafeed,Delete {dfeeds-cap}>>.
 
 It is not currently possible to delete multiple jobs using wildcards or a comma
 separated list.
@@ -28,7 +28,7 @@ separated list.
 ===== Path Parameters
 
 `job_id` (required)::
-  (string)    Identifier for the job
+  (string) Identifier for the job
 
 
 ===== Authorization
