--- a/docs/en/rest-api/ml/get-datafeed-stats.asciidoc
+++ b/docs/en/rest-api/ml/get-datafeed-stats.asciidoc
@@ -1,9 +1,9 @@
 //lcawley Verified example output 2017-04-11
 [[ml-get-datafeed-stats]]
-==== Get Data Feed Statistics
+==== Get {dfeed-cap} Statistics
 
-The get data feed statistics API enables you to retrieve usage information for
-data feeds.
+The get {dfeed} statistics API enables you to retrieve usage information for
+{dfeeds}.
 
 
 ===== Request
@@ -15,16 +15,16 @@ data feeds.
 
 ===== Description
 
-If the data feed is stopped, the only information you receive is the
+If the {dfeed} is stopped, the only information you receive is the
 `datafeed_id` and the `state`.
 
 
 ===== Path Parameters
 
 `feed_id`::
-  (string) Identifier for the data feed.
+  (string) Identifier for the {dfeed}.
   This parameter does not support wildcards, but you can specify `_all` or
-  omit the `feed_id` to get information about all data feeds.
+  omit the `feed_id` to get information about all {dfeeds}.
 
 
 ===== Results
@@ -32,8 +32,8 @@ If the data feed is stopped, the only information you receive is the
 The API returns the following information:
 
 `datafeeds`::
-  (array) An array of data feed count objects.
-  For more information, see <<ml-datafeed-counts,Data Feed Counts>>.
+  (array) An array of {dfeed} count objects.
+  For more information, see <<ml-datafeed-counts>>.
 
 
 ===== Authorization
@@ -45,7 +45,7 @@ privileges to use this API. For more information, see <<privileges-list-cluster>
 ===== Examples
 
 The following example gets usage information for the
-`datafeed-farequote` data feed:
+`datafeed-farequote` {dfeed}:
 
 [source,js]
 --------------------------------------------------
