--- a/docs/en/rest-api/ml/jobresource.asciidoc
+++ b/docs/en/rest-api/ml/jobresource.asciidoc
@@ -212,10 +212,10 @@ LEAVE UNDOCUMENTED
 
 The data description defines the format of the input data when you send data to
 the job by using the <<ml-post-data,post data>> API. Note that when configure
-a data feed, these properties are automatically set.
+a {dfeed}, these properties are automatically set.
 
 When data is received via the <<ml-post-data,post data>> API, it is not stored
-in Elasticsearch. Only the results for anomaly detection are retained.
+in {es}. Only the results for anomaly detection are retained.
 
 A data description object has the following properties:
 
