--- a/docs/en/rest-api/ml/preview-datafeed.asciidoc
+++ b/docs/en/rest-api/ml/preview-datafeed.asciidoc
@@ -1,8 +1,8 @@
 //lcawley: Verified example output 2017-04-11
 [[ml-preview-datafeed]]
-==== Preview Data Feeds
+==== Preview {dfeeds-cap}
 
-The preview data feed API enables you to preview a data feed.
+The preview {dfeed} API enables you to preview a {dfeed}.
 
 
 ===== Request
@@ -13,14 +13,14 @@ The preview data feed API enables you to preview a data feed.
 ===== Description
 
 The API returns the first "page" of results from the `search` that is created
-by using the current data feed settings. This preview shows the structure of
+by using the current {dfeed} settings. This preview shows the structure of
 the data that will be passed to the anomaly detection engine.
 
 
 ===== Path Parameters
 
 `datafeed_id` (required)::
-  (string) Identifier for the data feed
+  (string) Identifier for the {dfeed}
 
 
 ===== Authorization
@@ -31,7 +31,7 @@ privileges to use this API. For more information, see <<privileges-list-cluster>
 
 ===== Examples
 
-The following example obtains a preview of the `datafeed-farequote` data feed:
+The following example obtains a preview of the `datafeed-farequote` {dfeed}:
 
 [source,js]
 --------------------------------------------------
