--- a/docs/en/settings/ml-settings.asciidoc
+++ b/docs/en/settings/ml-settings.asciidoc
@@ -10,8 +10,8 @@ You do not need to configure any settings to use {ml}. It is enabled by default.
 Set to `true` (default) to enable {ml}. +
 +
 If set to `false` in `elasticsearch.yml`, the {ml} APIs are disabled.
-You also cannot open jobs or start data feeds.
-If set to `false` in `kibana.yml`, the {ml} icon is not visible in Kibana. +
+You also cannot open jobs or start {dfeeds}.
+If set to `false` in `kibana.yml`, the {ml} icon is not visible in {kib}. +
 +
 TIP: If you want to use {ml} features in your cluster, you must enable {ml} on
 all master-eligible nodes. This is the default behavior.
